fazendo o desafio da aula: criar a aba Sua Biblioteca do Spotify

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
                     </li>
                 </ul>
             </div>
+            <div class="biblioteca">
+                <a href="">
+                    <span class="fa fas fa-book"></span>
+                    <span>Sua Biblioteca</span>
+                </a>
+            </div>
         </nav>
     </div>
 </body>
