estilizando a opção biblioteca

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                     <span class="fa fas fa-book"></span>
                     <span>Sua Biblioteca</span>
                 </a>
+                <a href="" class="criarPlaylist">
+                    <span class="fa fa-plus"></span>
+                </a>
             </div>
         </nav>
     </div>
