botão Sua Biblioteca consertado

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
                     </li>
                 </ul>
             </div>
-            <div class="biblioteca">
-                <a href="">
-                    <span class="fa fas fa-book"></span>
-                    <span>Sua Biblioteca</span>
-                </a>
-                <a href="" class="criarPlaylist">
-                    <span class="fa fa-plus"></span>
-                </a>
-            </div>
         </nav>
+        <div class="library">
+            <div class="library__content">
+                <button class="library__button">
+                    <span class="fa fas fa-book"></span>
+                    <span>Sua biblioteca</span>
+                </button>
+                <span class="fa fa-plus"></span>
+            </div>
+        </div>
     </div>
 </body>
 </html>
