--- a/index.html
+++ b/index.html
@@ -64,12 +64,14 @@
             </div>
         </div>
     </div>
-    <div class="footer">
-        <span class="text title">Testar Premium de graça</span>
-        <span class="text subtitle">Inscreva-se para curtir música ilimitada e podcasts só com alguns anúncios. Não precisa de cartão de crédito</span>
-        <button class="footer__button">
-            <span>Inscreva-se grátis</span>
-        </button>
-    </div>
+    <footer class="disclaimer-premium">
+        <div class="text">
+            <p class="disclaimer-premium__title">Testar Premium de graça</p>
+            <p class="disclaimer-premium__subtitle">Inscreva-se para curtir música ilimitada e podcasts só com alguns anúncios. Não precisa de cartão de crédito</p>
+        </div>
+        <div class="button">
+            <button type="button">Inscreva-se grátis</button>
+        </div>        
+    </footer>
 </body>
 </html>
